[gd_scene load_steps=3 format=3 uid="uid://d4mchi4q55xdb"]

[ext_resource type="Script" uid="uid://cnjgaa41oxy3e" path="res://scenes/motorbike/motorbike.gd" id="1_1bwdf"]
[ext_resource type="Texture2D" uid="uid://00n2thhmcl8x" path="res://assets/motorbike.png" id="1_w1uch"]

[node name="Motorbike" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_1bwdf")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_w1uch")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-2, -31, 2, -31, 5, -28, 6, -23, 9, -19, 10, -11, 17, -6, 14, -5, 10, -6, 8, -3, 11, 3, 11, 10, 9, 19, 3, 22, 3, 31, -3, 31, -3, 22, -10, 18, -12, 9, -11, 2, -8, -4, -11, -7, -11, -7, -11, -7, -14, -5, -17, -6, -10, -11, -9, -19, -6, -23, -5, -28)

[node name="RayCastCenter" type="RayCast2D" parent="."]
target_position = Vector2(0, -50)
collide_with_areas = true

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-19, -40)
collide_with_areas = true

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(19, -40)
collide_with_areas = true
